windows: treat unpinned files as compressed

an unpinned file is not present on disk and so we don't actually care
about its theoretical size, but rather its actual on-disk size.

this in particular covers onedrive files that haven't been pulled onto
disk

BUG: 486549


(cherry picked from commit 06990b8205d8ad3b270a4fed3c130d837a1ecac7)